# prog_scripts

./: 3po4_ME.sh  DF_chi_local.py  DF_chi_local.py~  FT_chi.py  FT_chi.py~  FT_one.py  FT_one.py~  FT_slice_extract.py~  FT_taubo2.py  FT_taubo2.py~  ME_prep_james.py  ME_prep_james.py~  ME_prep_james_fast.py  ME_prep_james_fermion.py  ME_prep_james_fermion.py~  ME_prep_james_fermion_less.py  ME_prep_james_fermion_less.py~  ME_prep_james_less_fallout.py  ME_prep_james_lessfast (another copy).py  ME_prep_james_lessfast (copy).py  ME_prep_james_lessfast-phsym.py  ME_prep_james_lessfast.py  ME_prep_james_lessfast.py~  ME_prep_james_lessfast_bubble.py  ME_prep_james_lessfast_fallout.py  ME_prep_james_lesslessfast.py  ME_prep_james_lesslessfast.py~  ME_prep_james_ma.py~  ME_prep_james_ma_U10.py  ME_prep_james_ma_U10.py~  ME_prep_james_more.py  ME_prep_james_more.py~  README.md  awk_cuts (copy).sh  awk_cuts.sh  awk_slice.sh  collect_sigma_database.py  cor_from_chi.py  cor_from_chi_const.py  cor_from_chi_noconst.py  (+135 more)
bubble_code/: CMakeCache.txt  CMakeLists.txt  Makefile  bubble  bubble-old.cpp  bubble.cpp  cmake_install.cmake  compile.sh
depricated_scripts/: ME_prep_james.py~  get_chi_parm.py  linear_fit_chisumQ.py  run_inverter.sh  run_inverter.sh~
